GH-458 Add syntax highlighting to code snippets